---------------------------------------------------------------------------
Version 4.4.2  [v4-stable] (rgerhards), 2009-09-??
- bugfix: reverse lookup reduction logic in imudp do DNS queries too often
  A comparison was done between the current and the former source address.
  However, this was done on the full sockaddr_storage structure and not
  on the host address only. This has now been changed for IPv4 and IPv6.
  The end result of this bug could be a higher UDP message loss rate than
  necessary (note that UDP message loss can not totally be avoided due
  to the UDP spec)
---------------------------------------------------------------------------
Version 4.4.1  [v4-stable] (rgerhards), 2009-09-02
- features requiring Java are automatically disabled if Java is not
  present (thanks to Michael Biebl for his help!)
- bugfix: invalid double-quoted PRI, among others in outgoing messages
  This causes grief with all receivers.
  Bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=147
- bugfix: Java testing tools were required, even if testbench was disabled
  This resulted in build errors if no Java was present on the build system,
  even though none of the selected option actually required Java.
  (I forgot to backport a similar fix to newer releases).
- bugfix (backport): omfwd segfault
  Note that the orginal (higher version) patch states this happens only
  when debugging mode is turned on. That statement is wrong: if debug
  mode is turned off, the message is not being emitted, but the division
  by zero in the actual parameters still happens.
---------------------------------------------------------------------------
Version 4.4.0  [v4-stable] (rgerhards), 2009-08-21
- bugfix: stderr/stdout were not closed to be able to emit error messages,
  but this caused ssh sessions to hang. Now we close them after the 
  initial initialization. See forum thread:
  http://kb.monitorware.com/controlling-terminal-issues-t9875.html